# mail_groene_maaiers

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  env.example  groene_maaiers.py  justfile  mail.sh  main.py  mypy_report.xml  noxfile.py  pyproject.toml  quickstart.py  renovate.json  renovate.json5  requirements-dev.txt  requirements.txt  run  sync_exclude.txt  test_groene_maaiers.py
.github/workflows/: build_and_push.yml  test_code.yml  test_code_nox_style.yml
mail_groene_maaiers/: groene_maaiers.py
src/mail_groene_maaiers/: mail_groene_maaiers.py
tests/: test_groene_maaiers.py  test_mail_groene_maaiers.py
