[tool.poetry]
name = "mail-groene-maaiers"
version = "0.1.4"
description = "Using a Gsheet to extract names to send out reminders using email."
authors = ["Bart Dorlandt <bart@bamweb.nl>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2"
google-auth-httplib2 = "^0"
python-decouple = "^3"
rich = "^13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4"
mypy = "^1"
ruff = "^0"
nox = "^2023.4.22"
nox-poetry = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning",
]
addopts = "--cov=. --cov-report=xml --cov-report=term --junitxml=pytest_report.xml"

[tool.coverage.run]
branch = true
omit = ["tests/*", "main.py", "noxfile.py"]
source = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-ignore = ["F401", "F403", "PLR2004", "D203", "D213", "D407", "D406"]
extend-select = ["I", "C90", "D", "PL", "S"]
extend-exclude = [".git","__pycache__","dist","build",".venv", "test_*", "noxfile.py"]

[tool.ruff.mccabe]
max-complexity = 10
