[tool.poetry]
name = "mail-groene-maaiers"
version = "0.1.4"
description = "Using a Gsheet to extract names to send out reminders using email."
authors = ["Bart Dorlandt <bart@bamweb.nl>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2"
google-auth-httplib2 = "^0"
python-decouple = "^3"
rich = "^13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4"
mypy = "^1"
ruff = "^0"
nox = "^2024.0.0"
nox-poetry = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning",
]
addopts = "--cov=. --cov-report=xml --cov-report=term --junitxml=pytest_report.xml"

[tool.coverage.run]
branch = true
omit = ["tests/*", "main.py", "noxfile.py"]
source = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".git","__pycache__","dist","build",".venv", "test_*", "noxfile.py"]

[tool.ruff.lint]
extend-ignore = ["D203", "D213", "PLR2004"]
extend-select = [
    # pycodestyle Google style
    "D", 
    # pycodestyle errors and warnings
    "E", "W",
    # mccabe
    "C90",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # pylint
    "PL",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
