[project]
name = "mail-groene-maaiers"
version = "0.2.1"
description = "Using a Gsheet to extract names to send out reminders using email."
readme = "README.md"
authors = [{ name = "Bart Dorlandt", email = "bart@bamweb.nl" }]
requires-python = ">=3.12"
dependencies = [
    "environs>=14.1.1",
    "google-api-python-client>=2.142.0",
    "google-auth-httplib2>=0.2.0",
    "rich>=13.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_groene_maaiers"]

[tool.uv]
python-preference = "managed"
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.1",
    "ruff>=0.6.1",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The _yaml extension module is now located at yaml._yaml:DeprecationWarning",
]
addopts = "--cov=. --cov-report=xml --cov-report=term --junitxml=pytest_report.xml"

[tool.coverage.run]
branch = true
omit = ["tests/*", "main.py", "noxfile.py"]
source = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "test_*",
    "noxfile.py",
]

[tool.ruff.lint]
extend-ignore = ["D203", "D213", "PLR2004"]
extend-select = [
    # pycodestyle Google style
    "D",
    # pycodestyle errors and warnings
    "E",
    "W",
    # mccabe
    "C90",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # pylint
    "PL",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
